# tunesoar

./: .env  .gitignore  README.md  build-landing.cjs  build-landing.js  build-landing.mjs  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
browser-extension/: background.js  manifest.json  popup.html  popup.js
docs/: CONTEXT_MAPPING.md  PRIVACY.md  SAFETY.md
docs/incidents/: 2026-05-13-clerk-host-invalid.md  2026-05-13-tunesoar-audio-desktop-launch.md
evidence/: phase1-frontend.txt  phase1-icons.txt  phase1-prereqs.md  phase1-tauri-config.txt  phase2-workflow.md  phase4-summary.md
landing/: pages.ts
landing-dist/: 404.html  downloads.html  index.html
scripts/: build-all.sh  install.ps1  install.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth_server.rs  commands.rs  lib.rs  main.rs
src-tauri/src/audio/: binaural.rs  mod.rs
src-tauri/src/context/: defaults.rs  detector.rs  mod.rs  platform.rs
src-tauri/src/license/: mod.rs
src-tauri/src/safety/: gate.rs  mod.rs
src-tauri/src/storage/: db.rs  mod.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/ws/: mod.rs  server.rs
src-tauri/tests/: integration_tests.rs  safety_tests.rs
src/components/: Account.tsx  BreakNotice.tsx  ContextMappings.tsx  ErrorToast.tsx  Logo.tsx  Onboarding.tsx  SafetyWarning.tsx  Settings.tsx  TrayWindow.tsx  Upgrade.tsx
src/types/: index.ts
worker/: package-lock.json  package.json  pnpm-lock.yaml  schema.sql  tsconfig.json  wrangler.toml
(+8 files in other folders)
