[package]
name = "tunesoar"
version = "0.1.0"
description = "Context-Aware Binaural Beats Desktop App"
authors = ["TranceLab"]
license = "MIT"
repository = "https://github.com/Donald8585/tunesoar"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tunesoar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

# Audio
cpal = "0.15"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.3"
regex = "1"
regex = "1"

# Active window detection (platform-specific)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
